--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,54 @@
 version: '3.1'
-services:
-  stats-server:
-    ports:
-      - "9090:9090"
 
-  stats-db:
-    image: postgres:14-alpine
+services:
 
   ewm-service:
+    build: main/
+    container_name: main
+    image: 'explore-with-me-main'
     ports:
       - "8080:8080"
+    depends_on:
+      - ewm-db
+    environment:
+      - explore-with-me-stat.url=http://stats-server:9090
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://ewm-db:5432/explorewithme
+      - SPRING_DATASOURCE_USERNAME=root
+      - SPRING_DATASOURCE_PASSWORD=root
 
   ewm-db:
+    container_name: ewm-db
     image: postgres:14-alpine
+    ports:
+      - "6541:5432"
+    volumes:
+      - /var/lib/postgresql/data/
+    environment:
+      - POSTGRES_PASSWORD=root
+      - POSTGRES_USER=root
+      - POSTGRES_DB=explorewithme
+
+  stats-server:
+    build: stat/
+    container_name: stats
+    image: 'explore-with-me-stat'
+    ports:
+      - "9090:9090"
+    depends_on:
+      - stats-db
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://stats-db:5432/explorewithmestat
+      - SPRING_DATASOURCE_USERNAME=root
+      - SPRING_DATASOURCE_PASSWORD=root
+
+  stats-db:
+    container_name: stats-db
+    image: postgres:14-alpine
+    ports:
+      - "6543:5432"
+    volumes:
+      - /var/lib/postgresql/data/
+    environment:
+      - POSTGRES_PASSWORD=root
+      - POSTGRES_USER=root
+      - POSTGRES_DB=explorewithmestat
