--- a/main/src/main/resources/application.properties
+++ b/main/src/main/resources/application.properties
@@ -1,4 +1,10 @@
 server.port=8080
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
+spring.jpa.properties.hibernate.format_sql=true
+server.error.include-message=always
 explore-with-me-stat.url=http://localhost:9090
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
