--- a/main/src/main/resources/application.properties
+++ b/main/src/main/resources/application.properties
@@ -17,10 +17,12 @@ logging.level.org.springframework.orm.jpa=INFO
 logging.level.org.springframework.transaction=INFO
 logging.level.org.springframework.transaction.interceptor=TRACE
 logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
-logging.level.web=TRACE
-logging.level.org.springframework.web.servlet.mvc.method.annotation.RequestResponseBodyMethodProcessor=TRACE
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.level.org.zalando.logbook=TRACE
+server.servlet.encoding.enabled=true
+server.servlet.encoding.charset=UTF-8
+server.servlet.encoding.force=true
 #---
 logging.level.org.springframework.web.client.RestTemplate=DEBUG
 spring.config.activate.on-profile=ci,test
