--- a/stat/pom.xml
+++ b/stat/pom.xml
@@ -74,6 +74,10 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.zalando</groupId>
+            <artifactId>logbook-spring-boot-starter</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
